@@ -1,12 +1,21 @@
 package org.jruby.util.io;
 
-import com.headius.modulator.Modulator;
+import com.headius.backport9.modules.Modules;
 import jnr.enxio.channels.NativeSelectableChannel;
+import jnr.ffi.LibraryLoader;
+import jnr.ffi.Pointer;
 import jnr.posix.FileStat;
+import jnr.posix.HANDLE;
+import jnr.posix.JavaLibCHelper;
 import jnr.posix.POSIX;
 import jnr.unixsocket.UnixServerSocketChannel;
 import jnr.unixsocket.UnixSocketChannel;
+
+import org.jruby.javasupport.Java;
+import org.jruby.platform.Platform;
 import org.jruby.util.collections.NonBlockingHashMapLong;
+import org.jruby.util.log.Logger;
+import org.jruby.util.log.LoggerFactory;
 
 import java.io.FileDescriptor;
 import java.lang.reflect.Field;
@@ -20,6 +29,11 @@ import java.util.concurrent.atomic.AtomicInteger;
 public class FilenoUtil {
     public FilenoUtil(POSIX posix) {
         this.posix = posix;
+        if (posix.isNative() && Platform.IS_WINDOWS) {
+            winc = LibraryLoader.create(WinC.class).load("msvcrt");// TODO: string
+        } else {
+            winc = null;
+        }
     }
 
     public static FileDescriptor getDescriptorFromChannel(Channel channel) {
@@ -124,20 +138,67 @@ public class FilenoUtil {
         return -1;
     }
 
+    public static HANDLE handleFrom(Channel channel) {
+        if (channel instanceof NativeSelectableChannel) {
+            return HANDLE.valueOf(((NativeSelectableChannel)channel).getFD()); // TODO: this is an int. Do windows handles ever grow larger?
+        }
+
+        return getHandleUsingReflection(channel);
+    }
+
+    private static HANDLE getHandleUsingReflection(Channel channel) {
+        if (ReflectiveAccess.FILE_DESCRIPTOR_FD != null) {
+            return JavaLibCHelper.gethandle(getDescriptorFromChannel(channel));
+        }
+        return HANDLE.valueOf(-1);
+    }
+
+    public int filenoFromHandleIn(Channel channel, int flags) {
+        if (winc == null)
+            return -1;
+        HANDLE hndl = handleFrom(channel);
+        if (!hndl.isValid())
+            return -1;
+        return winc._open_osfhandle(hndl.toPointer(), flags); // TODO: don't re-open this handle ever again, or we start to leak?
+    }
+
+    public int closeFilenoHandle(int fd) {
+        if (fd != -1)
+            return winc._close(fd);// TODO: error handling
+        return -1;
+    }
+
+    public static interface WinC {
+        int _open_osfhandle(Pointer hndl, int flgs);
+        int _close(int fd);
+    }
+
     public static final int FIRST_FAKE_FD = 100000;
     protected final AtomicInteger internalFilenoIndex = new AtomicInteger(FIRST_FAKE_FD);
     private final NonBlockingHashMapLong<ChannelFD> filenoMap = new NonBlockingHashMapLong<ChannelFD>();
     private final POSIX posix;
+    private final WinC winc;
+
+    static final Logger LOG = LoggerFactory.getLogger(FilenoUtil.class);
 
     private static class ReflectiveAccess {
         static {
+            // open package "sun.nio.ch" (from java.base) for org.jruby.dist module
+            try {
+                Modules.addOpens(FileDescriptor.class, "sun.nio.ch", ReflectiveAccess.class);
+            } catch (RuntimeException re) {
+                // Warn users since we don't currently handle half-native process control.
+                LOG.warn("Native subprocess control requires open access to sun.nio.ch\n" +
+                        "Pass '--add-opens java.base/sun.nio.ch=org.jruby.dist' or '=org.jruby.core' to enable.");
+            }
+
             Method getFD;
             Class selChImpl;
             try {
                 selChImpl = Class.forName("sun.nio.ch.SelChImpl");
                 try {
                     getFD = selChImpl.getMethod("getFD");
-                    if (!Modulator.trySetAccessible(getFD)) {
+                    if (!Java.trySetAccessible(getFD)) {
                         getFD = null;
                     }
                 } catch (Exception e) {
@@ -156,7 +217,7 @@ public class FilenoUtil {
                 fileChannelImpl = Class.forName("sun.nio.ch.FileChannelImpl");
                 try {
                     fd = fileChannelImpl.getDeclaredField("fd");
-                    if (!Modulator.trySetAccessible(fd)) {
+                    if (!Java.trySetAccessible(fd)) {
                         fd = null;
                     }
                 } catch (Exception e) {
@@ -172,7 +233,7 @@ public class FilenoUtil {
             Field ffd;
             try {
                 ffd = FileDescriptor.class.getDeclaredField("fd");
-                if (!Modulator.trySetAccessible(ffd)) {
+                if (!Java.trySetAccessible(ffd)) {
                     ffd = null;
                 }
             } catch (Exception e) {
